Postnummer kan være null