@@ -4,6 +4,7 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 
 import no.nav.melosys.domain.adresse.StrukturertAdresse;
+import org.apache.commons.lang3.StringUtils;
 
 public record Oppholdsadresse(
     StrukturertAdresse strukturertAdresse,
@@ -18,6 +19,6 @@ public record Oppholdsadresse(
 
     @Override
     public boolean harRegistrertAdresse() {
-        return strukturertAdresse != null && !strukturertAdresse.erTom() && !strukturertAdresse.getPostnummer().isBlank();
+        return strukturertAdresse != null && !strukturertAdresse.erTom() && !StringUtils.isBlank(strukturertAdresse.getPostnummer());
     }
 }
